tests/errors/typecheck/test_tc_09_undef_module_func.pc
#import std.io;
int main() {
    io.nonexistent_func(42);
    return 0;
}
